# py-canon

./: .gitignore  FLEET  README.md  STANDARD.md  copier.yml  pyproject.toml
.github/: zizmor.yml
.github/workflows/: ci.yml  fleet-health.yml  promote.yml  release.yml  reusable-ci.yml  reusable-docs.yml  reusable-release.yml
src/py_canon/: __init__.py  sphinx.py
template/: CITATION.cff.jinja  README.md.jinja  pyproject.toml.jinja  {{ _copier_conf.answers_file }}.jinja
template/.github/workflows/: ci.yml.jinja  docs.yml.jinja
template/docs/: api.md.jinja  index.md.jinja
template/src/{{ package_name }}/: __init__.py.jinja  {% if needs_cli %}cli.py{% endif %}.jinja
template/tests/: test_basic.py.jinja
tests/: test_sphinx_config.py
