[project]
name = "py-canon"
description = "Shared configuration and standards for the fleet's Python packages"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gaurav Sood", email = "gsood07@gmail.com" }]
requires-python = ">=3.11"
dynamic = ["version"]
keywords = ["template", "standards", "sphinx", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gojiplus/py-canon"
Repository = "https://github.com/gojiplus/py-canon"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[tool.hatch.build.targets.wheel]
packages = ["src/py_canon"]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pyright>=1.1.390",
    "pytest>=8",
    "pydoclint>=0.5",
]
test = ["pytest>=8", "sphinx>=8", "furo", "myst-parser", "sphinx-copybutton"]
docs = ["sphinx>=8", "furo", "myst-parser", "sphinx-copybutton"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "D", "S", "SIM", "T20", "PT", "RUF"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
exclude = "tests|docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
